# cookiecutter-python-tornado

./: TODO  cookiecutter.json
{{cookiecutter.project_slug}}/: requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
{{cookiecutter.project_slug}}/etc/{{cookiecutter.project_slug}}/: logging.conf
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: application.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/app/default/: controllers.py  services.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/apps/default/: controllers.py  (+1 more)
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/cmd/: server.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/cmds/: server.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/commands/: cron.py  webserver.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/common/: app.py  controller.py  database.py  exceptions.py  postgres.py  queue.py  route.py  utils.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/daemons/: default.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/persistent/: postgres.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/servers/: default.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/static/: status.html
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/storage/: postgres.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/template/: error.html
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/templates/: error.html
(+1 files in other folders)
