[metadata]
name = {{cookiecutter.project_slug}}
author = {{cookiecutter.project_slug}}
author-email = {{cookiecutter.project_slug}}
summary = {{cookiecutter.project_short_description}}
description-file = README.md
license = Apache-2
classifier =
    Development Status :: 4 - Beta
        Environment :: Console
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        License :: OSI Approved :: Apache Software License
        Operating System :: OS Independent
        Programming Language :: Python
keywords =
    setup
    distutils
[files]
packages =
    pbr
data_files =
    etc/{{cookiecutter.project_slug}} = etc/*
[entry_points]
console_scripts =
    {{cookiecutter.project_slug}}-server = {{cookiecutter.project_slug}}.cmds.server:main
pbr.config.drivers =
    plain = pbr.cfg.driver:Plain
